--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Aaravv's Portfolio</title>
+        <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
+        <link rel="stylesheet" href="main.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="window">
+            <div class="title-bar">
+                <button aria-label="Close" class="close"></button>
+                <h1 class="title">Home</h1>
+                <button aria-label="Resize" class="resize"></button>
+            </div>
+            <div class="separator"></div>
+            <div class="window-pane">
+                <h1 id="hero-typed"></h1>
+                <p id="hero-typed"></p>
+                <button class="btn">Hello</button>
+            </div>
+        </div>
+        <script src="typed.umd.js"></script>
+        <script src="typing.js"></script>
+    </body>
 </html>
