--- a/index.html
+++ b/index.html
@@ -1,122 +1,153 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Aaravv's Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="./fullpage.min.css" />
-        <link rel="stylesheet" type="text/css" href="main.css" />
-        <script src="./pixel-canvas.js"></script>
-        <!-- Created using fullPage.js (https://alvarotrigo.com/fullPage/) -->
-    </head>
-    <body>
-        <nav>
-            <ul id="navigation">
-                <div>
-                    <li data-anchor="top">
-                        <a href="#top">Aaravv</a>
-                    </li>
-                </div>
-                <div>
-                    <li data-anchor="aboutme">
-                        <a href="#aboutme">About Me</a>
-                    </li>
-                    <li data-anchor="skills">
-                        <a href="#skills">Skills</a>
-                    </li>
-                    <li data-anchor="myprojects">
-                        <a href="#myprojects">My Projects</a>
-                    </li>
-                    <li data-anchor="competitions">
-                        <a href="#competitions">Competitions</a>
-                    </li>
-                    <li data-anchor="contact">
-                        <a href="#contact">Contact</a>
-                    </li>
-                    <li>
-                        <a
-                            id="typingSpeedToggle"
-                            href="#"
-                            onclick="typeSpeedToggle()"
-                            title="This will not affect currently running typing animations."
-                            >Speed up typing</a
-                        >
-                    </li>
-                    <li id="hamburger">
-                        <span></span><span></span><span></span>
-                    </li>
-                </div>
-            </ul>
-        </nav>
-        <div id="fullpage">
-            <!-- Each section has a typing animation that starts on-scroll (except for the first one, because the user is already on that section). -->
-            <div class="section" id="hero">
-                <h1 id="hero-typed"></h1>
-                <p id="hero-typed"></p>
-            </div>
-            <div class="section">
-                <h1 id="aboutme-typed"></h1>
-                <p id="aboutme-typed"></p>
-            </div>
-            <div class="section">
-                <h1 id="skills-typed"></h1>
-                <p id="skills-typed"></p>
-                <div>
-                    <img src="html5-svgrepo-com.svg" alt="HTML5" />
-                </div>
-            </div>
-            <div class="section">
-                <h1 id="projects-typed"></h1>
-                <p id="projects-typed"></p>
-                <section id="scratchProjects">
-                    <iframe
-                        src="https://scratch.mit.edu/projects/815197073/embed"
-                        allowtransparency="true"
-                        width="485"
-                        height="402"
-                        frameborder="0"
-                        scrolling="no"
-                        allowfullscreen
-                    ></iframe>
-                </section>
-            </div>
-            <div class="section">
-                <h1 id="achievements-typed"></h1>
-                <p id="achievements-typed"></p>
-            </div>
-            <div class="section" id="last">
-                <h1 id="contactme-typed"></h1>
-                <p id="contactme-typed"></p>
-                <footer>Copyright &copy; Aaravv Chopra</footer>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aaravv's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/fullpage.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script src="css/pixel-canvas.js"></script>
+    <!-- Created using fullPage.js (https://alvarotrigo.com/fullPage/) -->
+  </head>
+  <body>
+    <nav>
+      <ul id="navigation">
+        <div>
+          <li data-anchor="top">
+            <a href="#top">Aaravv</a>
+          </li>
         </div>
-        <script type="text/javascript" src="typed.umd.js"></script>
-        <script type="text/javascript" src="typing.js"></script>
-        <script type="text/javascript" src="fullpage.min.js"></script>
-        <script>
-            placeHolder = document.getElementById("contact");
-            // Fullpage.js code
-            var myFullpage = new fullpage("#fullpage", {
-                responsiveWidth: 800,
+        <div>
+          <li data-anchor="aboutme">
+            <a href="#aboutme">About Me</a>
+          </li>
+          <li data-anchor="skills">
+            <a href="#skills">Skills</a>
+          </li>
+          <li data-anchor="myprojects">
+            <a href="#myprojects">My Projects</a>
+          </li>
+          <li data-anchor="competitions">
+            <a href="#competitions">Competitions</a>
+          </li>
+          <li data-anchor="contact">
+            <a href="#contact">Contact</a>
+          </li>
+          <li>
+            <a
+              id="typingSpeedToggle"
+              href="#"
+              onclick="typeSpeedToggle()"
+              title="This will not affect currently running typing animations."
+              >Speed up typing</a
+            >
+          </li>
+          <li id="hamburger"><span></span><span></span><span></span></li>
+        </div>
+      </ul>
+    </nav>
+    <div id="fullpage">
+      <!-- Each section has a typing animation that starts on-scroll (except for the first one, because the user is already on that section). -->
+      <div class="section" id="hero">
+        <h1 id="hero-typed"></h1>
+        <p id="hero-typed"></p>
+      </div>
+      <div class="section">
+        <h1 id="aboutme-typed"></h1>
+        <p id="aboutme-typed"></p>
+      </div>
+      <div class="section">
+        <h1 id="skills-typed"></h1>
+        <p id="skills-typed"></p>
+        <div class="skills-container">
+          <img src="img/skills/HTML5_Logo.svg" alt="HTML5" class="skills-image" />
+          <div class="skills-overlay skills-overlay-html">
+            <div class="skills-overlay-text">100%</div>
+          </div>
+        </div>
+        <div class="skills-container">
+          <img src="img/skills/w3_css-icon.svg" alt="CSS3" class="skills-image" />
+          <div class="skills-overlay skills-overlay-css">
+            <div class="skills-overlay-text">85%</div>
+          </div>
+        </div>
+        <div class="skills-container">
+          <img src="img/skills/javascript_logo.svg" alt="JavaScript" class="skills-image" />
+          <div class="skills-overlay skills-overlay-js">
+            <div class="skills-overlay-text">100%</div>
+          </div>
+        </div>
+        <div class="skills-container">
+          <img src="HTML5_Logo.svg" alt="HTML5" class="skills-image" />
+          <div class="skills-overlay skills-overlay-python">
+            <div class="skills-overlay-text">100%</div>
+          </div>
+        </div>
+        <div class="skills-container">
+          <img src="HTML5_Logo.svg" alt="HTML5" class="skills-image" />
+          <div class="skills-overlay skills-overlay-c">
+            <div class="skills-overlay-text">100%</div>
+          </div>
+        </div>
+        <div class="skills-container">
+          <img src="HTML5_Logo.svg" alt="HTML5" class="skills-image" />
+          <div class="skills-overlay">
+            <div class="skills-overlay-text">100%</div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <h1 id="projects-typed"></h1>
+        <p id="projects-typed"></p>
+        <section id="scratchProjects">
+          <iframe
+            src="https://scratch.mit.edu/projects/815197073/embed"
+            allowtransparency="true"
+            width="485"
+            height="402"
+            frameborder="0"
+            scrolling="no"
+            allowfullscreen
+          ></iframe>
+        </section>
+      </div>
+      <div class="section">
+        <h1 id="achievements-typed"></h1>
+        <p id="achievements-typed"></p>
+      </div>
+      <div class="section" id="last">
+        <h1 id="contactme-typed"></h1>
+        <p id="contactme-typed"></p>
+        <footer>Copyright &copy; Aaravv Chopra</footer>
+      </div>
+    </div>
+    <script type="text/javascript" src="js/typed.umd.js"></script>
+    <script type="text/javascript" src="js/typing.js"></script>
+    <script type="text/javascript" src="js/fullpage.min.js"></script>
+    <script>
+      placeHolder = document.getElementById("contact");
+      // Fullpage.js code
+      var myFullpage = new fullpage("#fullpage", {
+        responsiveWidth: 800,
 
-                // Done on Nov 22, 2024. You can check the date probably.
-                licenseKey: "p4ldGaW!i0", // Note to self: DO NOT CHANGE THIS
+        // Done on Nov 22, 2024. You can check the date probably.
+        licenseKey: "p4ldGaW!i0", // Note to self: DO NOT CHANGE THIS
 
-                autoScrolling: true,
-                anchors: [
-                    "top",
-                    "aboutme",
-                    "skills",
-                    "myprojects",
-                    "competitions",
-                    "contact",
-                ],
-                afterLoad: function (origin, destination, direction, trigger) {
-                    if (origin) {
-                        callTyping(destination.index);
-                    }
-                },
-            });
-        </script>
-    </body>
+        autoScrolling: true,
+        anchors: [
+          "top",
+          "aboutme",
+          "skills",
+          "myprojects",
+          "competitions",
+          "contact",
+        ],
+        afterLoad: function (origin, destination, direction, trigger) {
+          if (origin) {
+            callTyping(destination.index);
+          }
+        },
+      });
+    </script>
+  </body>
 </html>
