add lots of skills stuff and convert full website to catppuccin

--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
         <div class="skills-container">
           <img src="img/skills/javascript_logo.svg" alt="JavaScript" class="skills-image" />
           <div class="skills-overlay skills-overlay-js">
-            <div class="skills-overlay-text">100%</div>
+            <div class="skills-overlay-text">50%</div>
           </div>
         </div>
         <div class="skills-container">
-          <img src="HTML5_Logo.svg" alt="HTML5" class="skills-image" />
+          <img src="img/skills/python_logo.svg" alt="Python" class="skills-image" />
           <div class="skills-overlay skills-overlay-python">
-            <div class="skills-overlay-text">100%</div>
+            <div class="skills-overlay-text">90%</div>
           </div>
         </div>
         <div class="skills-container">
-          <img src="HTML5_Logo.svg" alt="HTML5" class="skills-image" />
+          <img src="img/skills/C_Programming_Language.svg" alt="C" class="skills-image" />
           <div class="skills-overlay skills-overlay-c">
-            <div class="skills-overlay-text">100%</div>
+            <div class="skills-overlay-text">15%</div>
           </div>
         </div>
         <div class="skills-container">
