--- a/index.html
+++ b/index.html
@@ -99,17 +99,7 @@
       <div class="section">
         <h1 id="projects-typed"></h1>
         <p id="projects-typed"></p>
-        <section id="scratchProjects">
-          <iframe
-            src="https://scratch.mit.edu/projects/815197073/embed"
-            allowtransparency="true"
-            width="485"
-            height="402"
-            frameborder="0"
-            scrolling="no"
-            allowfullscreen
-          ></iframe>
-        </section>
+        <object type="image/svg+xml" data="https://gh-card.dev/repos/acuccoder/dfetch.svg?link_target=_blank" style="border-radius: 10px;"></object>
       </div>
       <div class="section">
         <h1 id="achievements-typed"></h1>
