--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           </div>
         </div>
         <div class="skills-container">
-          <img src="HTML5_Logo.svg" alt="HTML5" class="skills-image" />
-          <div class="skills-overlay">
-            <div class="skills-overlay-text">100%</div>
+          <img src="img/skills/Node.js_logo.svg" alt="Node.js" class="skills-image" />
+          <div class="skills-overlay skills-overlay-node">
+            <div class="skills-overlay-text">30%</div>
           </div>
         </div>
       </div>
