more liquid glass, fixed achievements section

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
           </div>
         </div>
         <div class="skills-container">
-          <img src="img/skills/Node.js_logo.svg" alt="Node.js" class="skills-image" />
-          <div class="skills-overlay skills-overlay-node">
-            <div class="skills-overlay-text">30%</div>
+          <img src="img/skills/Godot_icon.svg" alt="Godot" class="skills-image" />
+          <div class="skills-overlay skills-overlay-godot">
+            <div class="skills-overlay-text">10%</div>
           </div>
         </div>
       </div>
@@ -119,32 +119,7 @@
         <h1 id="projects-typed"></h1>
         <p id="projects-typed"></p>
         <object type="image/svg+xml" data="https://gh-card.dev/repos/acuccoder/dfetch.svg?link_target=_blank" style="border-radius: 10px;"></object>
-        
-        <!-- BEGIN Liquid Glass Card -->
-        <div class="liquidglass">
-          <div>
-            <p>Test</p>
-          </div>
-
-          <div class='liquidglass-accented'>
-            <h2>Rewards</h2>
-            <p>
-              <span class="text-accent">20%</span> Platform Fees +
-              <span class="text-accent">10%</span> Extra points
-            </p>
-          </div>
-
-        </div>
-        <!-- END Liquid Class Card -->
-
-        <!-- BEGIN Liquid Glass Navbar Test -->
-        <div class="liquidglass pillshape">
-          <div>
-            <p>Test</p>
-          </div>
-        </div>
-        <!-- END Liquid Class Card -->
-
+      
       </div>
       <div class="section">
         <h1 id="achievements-typed"></h1>
@@ -153,7 +128,8 @@
       <div class="section" id="last">
         <h1 id="contactme-typed"></h1>
         <p id="contactme-typed"></p>
-        <footer>Copyright &copy; Aaravv Chopra</footer>
+        <footer>Copyright &copy; Aaravv Chopra. The Godot Engine logo is copyrighted (c) to 2017 Andrea Calabró. It is licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International
+license (CC BY 4.0 International)</a>. 
       </div>
     </div>
     <script type="text/javascript" src="js/typed.umd.js"></script>
