add all comp links (mostly

--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
           <li><a href="https://cms.math.ca/competitions/cjmc/cjmc2023/">The 2023 Canada Jay Mathematics Competition - Distinction (top 10)</a></li>
           <li><a href="https://cms.math.ca/competitions/cjmc/cjmc2024/">The 2024 Canada Jay Mathematics Competition</a></li>
           <li><a href="https://cms.math.ca/competitions/clmc/clmc2024/">The 2024 Canada Lynx Mathematics Competition</a></li>
-          <li>The 10th Annual MegaMath Competition (2023) - Appreciation</li>
-          <li>The Megamind 2024 Spelling Bee Competition - Winner (1st place)</li>
-          <li>The Spelling Bee of Canada - Regional Competition - Primary 2nd</li>
-          <li>FIRST Tech Challenge Missisauga Qualifier - 1st Place Motivate Award</li>
-          <li>Ontario VEX IQ Robotics Championship MS Provincials</li>
-          <li>American Regions Mathematics League 2025</li>
+          <li><a href="https://megamindlearning.ca">The 10th Annual MegaMath Competition (2023) - Appreciation</a></li>
+          <li><a href="https://megamindlearning.ca">The Megamind 2024 Spelling Bee Competition - Winner (1st place)</a></li>
+          <li><a href="https://www.spellingbeeofcanada.ca/past-events">The Spelling Bee of Canada - Regional Competition - Primary 2nd</a></li>
+          <li><a href="https://ftc-events.firstinspires.org/2024/CAONMIQ">FIRST Tech Challenge Missisauga Qualifier 2024 - 1st Place Motivate Award</a></li>
+          <li><a href="https://www.robotevents.com/robot-competitions/vex-iq-competition/RE-VIQRC-24-8886.html#general-info">Ontario VEX IQ Robotics Championship MS Provincials</a></li>
+          <li><a href="https://arml3.com/">American Regions Mathematics League 2025</a></li>
         </ul>
       </div>
       <div class="section" id="last">
