add wasd link to projects

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h1 id="projects-typed"></h1>
         <p id="projects-typed"></p>
         <object type="image/svg+xml" data="https://gh-card.dev/repos/acuccoder/dfetch.svg?link_target=_blank" style="border-radius: 10px;"></object>
-      
+        <object type="image/svg+xml" data="https://gh-card.dev/repos/wasd-hq/wasd.svg?link_target=_blank" style="border-radius: 10px;"></object>
       </div>
       <div class="section">
         <h1 id="achievements-typed"></h1>
