add skills logos

--- a/index.html
+++ b/index.html
@@ -108,9 +108,22 @@
             <div class="skills-overlay-text">15%</div>
           </div>
         </div>
-        <div class="skills-container">
+        <div class="skills-container" title="The Godot Engine logo is copyrighted (c) to 2017 Andrea Calabró. It is licensed under the Creative Commons Attribution 4.0 International license (CC BY 4.0 International)">
           <img src="img/skills/Godot_icon.svg" alt="Godot" class="skills-image" />
           <div class="skills-overlay skills-overlay-godot">
+            <div class="skills-overlay-text">15%</div>
+          </div>
+        </div>
+        <div class="skills-container" title="By gg3po, Iwan Gabovitch - Tux Flat SVG, based on File:NewTux.svg by gg3po which is based on File:Tux.png by Larry Ewing, GPL, https://commons.wikimedia.org/w/index.php?curid=48629023">
+          <img src="img/skills/TuxFlat.svg" alt="Linux" class="skills-image" />
+          <div class="skills-overlay skills-overlay-linux">
+            <div class="skills-overlay-text">70%</div>
+          </div>
+        </div>
+        <!-- react -->
+        <div class="skills-container">
+          <img src="img/skills/React_Logo_SVG.svg" alt="React" class="skills-image" />
+          <div class="skills-overlay skills-overlay-react">
             <div class="skills-overlay-text">10%</div>
           </div>
         </div>
